# rate-my-drug

backend/: .gitignore  app.py  pyproject.toml
frontend/rate-my-drug/: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/rate-my-drug/app/: page.tsx  searchbar.tsx
frontend/rate-my-drug/app/drugs/[slug]/: page.tsx
frontend/rate-my-drug/components/: header-layout.tsx  search-bar.tsx
