[tool.poetry]
name = "rate-my-drug"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-cors = "^5.0.0"
ucimlrepo = "^0.0.7"
pymongo = "^4.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"